ags (2.0.4)

	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
	* fixed missing trailing audio after open wave

ags (2.0.3)

	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
	* fixed wrong recall access in AgsDssiBridge, AgsLv2Bridge, AgsLiveDssiBridge and AgsLiveLv2Bridge

ags (2.0.2)

	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
	* fixed ags_note_new_with_offset() prototype
	* fixed ags_recall_factory_create_buffer() to do safe iteration
	* fixed ags_functional_ffplayer_test to use correct parameter for pthread_join()
	* fixed ags_functional_test_util.c to check if realized
	* fixed use of unitialized value in ags_effect_bulk_real_resize_pads()
	* fixed NULL pointer dereference of AgsApplicationClass in ags_xorg_application_context.c
	* implemented ags_functional_test_util_idle_test_widget_realized()

ags (2.0.1)

	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
	* minor bug-fixes

ags (2.0.0)

	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
	* implemented AgsChannel to listen to AgsRecall::child-done()
	* implemented AgsInputCollectionEditor, AgsInputListingEditor and AgsInputEditor
	* implemented ags_soundcard_lock_buffer() and ags_soundcard_unlock_buffer()
	* implemented audio input properties
	* implemented AgsWaveWindow, AgsWaveEditor, AgsWaveToolbar and AgsWaveEdit
	* implemented AgsSelectBuffer and AgsPositionWaveCursor
	* implemented AgsWave and AgsBuffer
	* implemented ags-play-wave recall
	* implemented ags-capture-wave recall
	* implemented ags-copy-pattern recall plugin port for automation
	* implemented AgsAudiorec
	* new ags_globals.[ch]
	* new ags_uuid.[ch]
	* new ags_midi.[ch]
	* new ags_track.[ch]
	* new ags_char_buffer_util.[ch]
	* new ags_sound_container.[ch]
	* new ags_sound_resource.[ch]
	* new ags_wav_file.[ch]
	* new ags_soundcard_util.[ch]
	* new ags_plugin_port.[ch]
	* incompatible AgsBasePlugin::instantiate() function prototype
	* added ags_connectable_has_resource()