@@ -128,6 +128,7 @@ struct _AgsDevin
   guint buffer_size;
   guint samplerate; // sample_rate
 
+  pthread_mutex_t **buffer_mutex;
   void** buffer;
 
   volatile gboolean available;
